force-app/src/objects/cpm__Notification_Contacts__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Information about right contacts at customer in case of billing or errors</description>
    <fields>
        <fullName>cpm__Email__c</fullName>
        <description>E-mail address of contact person/group</description>
        <label>Email Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Organization_Id__c</fullName>
        <defaultValue>$Organization.Id</defaultValue>
        <description>Organization Id, to be use on data warehouse</description>
        <label>Organization Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Type__c</fullName>
        <description>Type of the contact person/group</description>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Notification Contacts</label>
</CustomObject>